recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:3: error: overloaded method value left with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
    forward(100:Double);left();forward(100:Double);left();forward(100:Double);left()
                        ^FourSquare:3: error: overloaded method value left with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
    forward(100:Double);left();forward(100:Double);left();forward(100:Double);left()
                                                   ^FourSquare:3: error: overloaded method value left with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
    forward(100:Double);left();forward(100:Double);left();forward(100:Double);left()
                                                                              ^FourSquare:6: error: overloaded method value left with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
  square();left();square();left();square();left()
           ^FourSquare:6: error: overloaded method value left with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
  square();left();square();left();square();left()
                           ^FourSquare:6: error: overloaded method value left with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
  square();left();square();left();square();left()
                                           ^